--------------------

- Fixed GCC 4.1.x compile warnings related to use of char vs unsigned char
  (GDAL/OGR ticket http://trac.osgeo.org/gdal/ticket/2495)

- Fixed VC++ WIN32 build problems in GDAL/OGR environment 
  (GDAL/OGR ticket http://trac.osgeo.org/gdal/ticket/2500)

- Detect compressed E00 input files and refuse to open them instead of
  crashing (bug 1928, GDAL/OGR ticket 2513)


Version 2.0.0 (2006-08-17):
---------------------------

- New functions to read E00 files directly as opposed to translating to
  binary coverage. Used in the implementation of E00 read support in OGR.
  Contributed by James E. Flemer <jflemer@alum.rpi.edu> (bug 1497)

  Adds the following new functions:

    AVCE00ReadE00Ptr AVCE00ReadOpenE00(const char *pszE00FileName);
    void             AVCE00ReadCloseE00(AVCE00ReadE00Ptr psRead);
    int              AVCE00ReadRewindE00(AVCE00ReadE00Ptr psRead);
    int              AVCE00ReadSeekE00(AVCE00ReadE00Ptr psRead,
                                       int nOffset, int nWhence); 
    void            *AVCE00ReadNextObjectE00(AVCE00ReadE00Ptr psRead,
                                             int bContinue);

- Support for a new AVCCoverPC2 coverage type that is a hybrid between
  AVCCoverPC and AVCCoverV7 (bug 1491)

- Accept empty subclass names for TX6/TX7 sections (bug 1261)

- Applied patch to remove any embedded '\0' from data line in 
  AVCE00GenTableRec()

- Support for reading standalone info tables (just tables, no coverage
  data) by pointing AVCE00ReadOpen() to the info directory (bug 1549).

- #include <unistd.h> to solve warning on 64 bit platforms (bug 1461)


Version 1.3.0 (2005-06-02):
---------------------------

- Applied Carl Anderson's patch to reduce the amount of stating while trying
  to discover filename "case" on Unix in AVCAdjustCaseSensitiveFilename.
  http://bugzilla.remotesensing.org/show_bug.cgi?id=314

- Fixed leak in AVCE00ReadOpen() when trying to open something that's 